finish create protocol test